fixed button list spacing for galaxy fold device size@

--- a/src/components/InteractiveRating/InteractiveRating.module.scss
+++ b/src/components/InteractiveRating/InteractiveRating.module.scss
@@ -191,5 +191,5 @@ $OverpassFont: 'Overpass', sans-serif;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  gap: .5rem;
+  gap: .3rem;
 }
